# FinanceWatchdog

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  investment-monitor-agent-tasks.md  pyproject.toml
config/: alerts.yaml.example  notifications.yaml.example  portfolio.yaml.example  research.yaml.example  robo.yaml.example  sources.yaml.example
cron/: crontab
docs/plans/: 2026-01-28-investment-monitor-mvp.md  2026-01-31-monte-carlo-implementation-plan.md  2026-01-31-monte-carlo-simulation-design.md  2026-02-01-discord-notifications-design.md  2026-02-01-discord-notifications-impl.md
scripts/: auto_update.sh  broad-collect-cron.sh  fetch_crisis_data.py  install.sh  robo-cron.sh  robo-research-loop.sh  robo-schedule.sh  run_digest.sh  run_regular.sh  run_weekly.sh
src/investment_monitor/: __init__.py  broad_collect.py  cli.py  config.py  diagnostics.py  logging_config.py  main.py  research_cli.py  setup_wizard.py
systemd/: investment-autoupdate.service  investment-autoupdate.timer  investment-digest.service  investment-digest.timer  investment-monitor.service  investment-monitor.timer  investment-robo.service  investment-robo.timer  investment-weekly.service  investment-weekly.timer
systemd/pi/: README.md  financewatchdog-autoupdate.service  financewatchdog-autoupdate.timer  financewatchdog-dashboard.service  financewatchdog-prune.service  financewatchdog-prune.timer  financewatchdog-research.service  financewatchdog-sentinel.service  financewatchdog-sentinel.timer  financewatchdog-sims.service  financewatchdog-sims.timer  financewatchdog-summary.service  financewatchdog-summary.timer  financewatchdog-trade.service  financewatchdog-trade.timer
tests/: test_alerts.py  test_analysis.py  test_backtest.py  test_broad_collect.py  test_broad_news.py  test_broad_prices.py  test_cli.py  test_collectors.py  test_config.py  test_confluence.py  test_confluence_promotion.py  test_congress_collector.py  test_congress_efd.py  test_diagnostics.py  test_discord_channel.py  test_discovery_inputs.py  test_discovery_pipeline.py  test_email_channel.py  test_fundamentals_collector.py  test_hardware.py  test_imessage_channel.py  test_insider_none_filter.py  test_main.py  test_market_hours.py  test_material_events.py  test_models.py  test_news_sentiment.py  test_notifications.py  test_ollama_client.py  test_pdf_report.py  test_performance_analyzer.py  test_research_batch_scoring.py  test_research_cli.py  test_research_config.py  test_research_models.py  test_research_operations.py  test_research_orchestrator.py  test_research_prompts.py  test_research_queue.py  test_research_report.py  (+30 more)
tests/test_simulation/: test_analyzer.py  test_cli.py  test_config.py  test_crisis_loader.py  test_engine.py  test_models.py  test_orchestrator_integration.py  test_report_formatter.py  test_sensitivity.py  test_storage.py
(+161 files in other folders)
